re migrate database to choreo

--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -23,6 +23,7 @@
   width: 95%;
   padding: 10px;
   margin: 20px 0;
+  font-weight: 800;
   background-color: #007bff;
   color: white;
   border: none;
