--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,7 +1,7 @@
 /* Container for the whole page */
-/* div {
-  font-family: Arial, sans-serif;
-} */
+div {
+  margin: 50 50;
+}
 
 /* Styles for the notes section */
 .notes-section {
