--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -2,9 +2,11 @@
 body {
   margin: 0;
   font-family: "Merriweather", serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-size: 16px;
   line-height: 1.6;
   color: #333;
+  background-color:beige;
   background-image: url("path/to/your/texture.jpg");
   background-repeat: repeat;
   background-size: 200px;
@@ -16,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
@@ -24,9 +26,9 @@ h6 {
 
 /* Reusable Styles */
 .container {
-  max-width: 960px;
+  max-width: 750px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
 .btn {
@@ -59,7 +61,7 @@ h6 {
 
 /* CSS Variables */
 :root {
-  --color-primary: #7a7a7a;
+  --color-primary: rgb(227, 225, 199);
   --color-secondary: #c4c4c4;
   --color-accent: #a8a8a8;
 }
