--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -6,7 +6,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #333;
-  background-color:beige;
+  background-color:var(--color-primary);
   background-image: url("path/to/your/texture.jpg");
   background-repeat: repeat;
   background-size: 200px;
