fixed snippet and content fetching and loading

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,7 +1,7 @@
 /* Header.css */
 
 .header {
-  font-family:serif ;
+  /* font-family: consolas; */
   background-color:brown;
   color: white;
   padding: 10px 20px;
