--- a/frontend/src/styles/NoteList.css
+++ b/frontend/src/styles/NoteList.css
@@ -23,5 +23,5 @@
   padding: 10px;
   border: px solid #ccc;
   border-radius: 5px;
-  background-color: rgb(183, 170, 170);
+  /* background-color: rgb(183, 170, 170); */
 }
