--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
   margin: 0;
-  font-family: "Merriweather", serif;
+  font-family: consolas;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-size: 16px;
   line-height: 1.6;
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: consolas; */
   font-weight: 700;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
