--- a/frontend/src/styles/Note.css
+++ b/frontend/src/styles/Note.css
@@ -1,5 +1,5 @@
 .note-container {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Times;
   padding: 10px;
   margin: 20px 0;
   border: 1px solid #ccc;
