--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,12 +1,16 @@
 /* Global Styles */
+/* * {
+  font-family: consolas;
+} */
+
 body {
   margin: 0;
-  font-family: consolas;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-family: consolas;
   font-size: 16px;
   line-height: 1.6;
   color: #333;
-  background-color:var(--color-primary);
+  background-color: var(--color-primary);
   background-image: url("path/to/your/texture.jpg");
   background-repeat: repeat;
   background-size: 200px;
