--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -1,13 +1,12 @@
 .sidebar {
   /* position: fixed; */
-  width: 100px;
-  background-color: #2c3e50;
-  color: white;
+  width: 7rem;
+  background-color: silver;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px;
-  /* Include padding in the height calculation */
+  padding: 0.5rem;
+  /* margin: 1rem; */
   box-sizing: border-box;
   /* height: 100vh; */
   /* To enable positioning child elements */
@@ -18,14 +17,21 @@
   top: 10%;
   flex-shrink: 0;
   position: sticky;
+  margin-left: 1rem;
+}
+
+.sidebar-nav-item {
+  background-color: gainsboro;
+  border: solid var(--color-accent) 0.1rem;
 }
 
 .sidebar-nav a {
   display: flex;
   align-items: center;
-  padding: 10px 15px;
+  padding: 5px 10px;
   border-radius: 2px;
-  color: white;
+  /* color: white; */
+  color: var(--color-text);
   text-decoration: none;
   /* font-size: 18px; */
   margin-bottom: 10px;
@@ -34,7 +40,7 @@
 
 .sidebar-nav a:hover,
 .sidebar-nav a.active {
-  background-color: #34495e;
+  background-color: gainsboro;
 }
 
 .sidebar-nav a svg {
@@ -64,7 +70,8 @@
   border-radius: 2px;
   background: none;
   border: none;
-  color: white;
+  /* color: white; */
+  color: black;
   /* font-size: 18px; */
   cursor: pointer;
   display: flex;
