--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -9,9 +9,9 @@ body {
   font-family: consolas;
   font-size: 16px;
   line-height: 1.6;
-  color: #333;
+  color: var(--color-text);
   background-color: var(--color-primary);
-  background-image: url("path/to/your/texture.jpg");
+  /* background-image: url("path/to/your/texture.jpg"); */
   background-repeat: repeat;
   background-size: 200px;
 }
@@ -31,7 +31,7 @@ h6 {
 /* Reusable Styles */
 .container {
   max-width: 750px;
-  margin: 10px;
+  /* margin: 10px; */
   padding: 0 2rem;
 }
 
@@ -65,7 +65,8 @@ h6 {
 
 /* CSS Variables */
 :root {
-  --color-primary: rgb(227, 225, 199);
+  --color-primary: rgb(230, 230, 230);
   --color-secondary: #c4c4c4;
-  --color-accent: #a8a8a8;
+  --color-accent: #787878;
+  --color-text: #333;
 }
