--- a/frontend/src/styles/NoteForm.css
+++ b/frontend/src/styles/NoteForm.css
@@ -1,36 +1,24 @@
-/* .note-form {
-  background-color: var(--color-primary);
-} */
-
-/* Styles for the notes section */
-.notes-section {
-  margin-bottom: 2rem;
-}
-
-.notes-section h2 {
-  color: #333;
-  font-size: 24px;
-}
-
-/* Styles for individual notes - assuming your Note component has some container element */
 .note-form {
-  /* background-color: #f9f9f9; */
-  /* border-left: 5px solid #007bff; */
-  /* margin: 10px 0; */
-  background-color: #fffcef;
-  /* background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23cdb9a8' fill-opacity='0.21'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: 85vh;
   padding: 10px 15px;
   border-radius: 5px;
 }
 
+.note-content {
+  flex-grow: 1;
+}
+
 /* Styles for the form section */
 form {
-  /* background-color: #fff; */
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
-  margin: auto;
+  /* background-color: #ffffff5a; */
+  /* padding: 20px; */
+  /* border-radius: 8px; */
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+  /* max-width: 500px; */
+  /* margin: auto; */
 }
 
 form h2 {
@@ -39,32 +27,13 @@ form h2 {
   margin-bottom: 20px;
 }
 
-form label {
-  font-weight: bold;
-  margin-top: 10px;
-}
-
 form input,
 form textarea {
-  width: 100%;
+  /* width: 100%; */
   padding: 8px;
-  margin: 8px 0 16px;
+  background-color: #ffffff95;
+  /* margin: 8px 0 16px; */
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
-
-form input[type="submit"] {
-  /* background-color: #007bff; */
-  /* color: white; */
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-/* form input[type="submit"]:hover {
-  background-color: #0056b3;
-} */
