--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-family: consolas;
+  /* font-family:'Courier New', Courier, monospace; */
   font-size: 16px;
   line-height: 1.6;
   color: var(--color-text);
@@ -23,6 +24,7 @@ h4,
 h5,
 h6 {
   /* font-family: consolas; */
+  /* font-family:'Courier New', Courier, monospace; */
   font-weight: 700;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
@@ -30,7 +32,10 @@ h6 {
 
 /* Reusable Styles */
 .container {
-  max-width: 750px;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  /* align-items: center; */
   /* margin: 10px; */
   padding: 0 2rem;
 }
@@ -65,8 +70,8 @@ h6 {
 
 /* CSS Variables */
 :root {
-  --color-primary: rgb(230, 230, 230);
+  --color-primary: rgb(239, 236, 228);
   --color-secondary: #c4c4c4;
-  --color-accent: #787878;
+  --color-accent: #a1a1a1;
   --color-text: #333;
 }
