added import folders front and back end, start refactoring services

--- a/frontend/src/styles/Import.css
+++ b/frontend/src/styles/Import.css
@@ -19,6 +19,7 @@
   align-items: center;
   cursor: pointer;
   padding: 10px;
+  background-color:#dddddd91;
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: background-color 0.3s;
