--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -9,13 +9,16 @@
 .content-container {
   display: flex;
   flex: 1;
+  background-image: url("../assets/polka-dots.svg");
 }
 
 /* Main content styles */
 .main-content {
   flex: 1;
-  padding: 20px;
-  margin-left: auto;
+  /* padding: 20px; */
+  /* margin: 20px; */
+  /* max-width: 920px; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   overflow-y: auto;
-  background-image: url("../assets/polka-dots.svg");
 }
