--- a/frontend/src/styles/Folder.css
+++ b/frontend/src/styles/Folder.css
@@ -18,13 +18,35 @@
   border-radius: 5px;
 }
 
-.folder-card h4 {
-  margin: 0;
-  margin-left: 6px;
+.folder-card-items {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  gap: 4px;
+  margin-left: 5px;
 }
+
+.folder-card-items h6 {
+  margin: 0;
+}
+
+.folder-icon {
+  color: burlywood;
+}
+
+/* .expand-icon {
+  padding: 2px 4px;
+  border: 1px solid lightslategray;
+  border-radius: 10px;
+} */
 
 .folder-card:hover {
   /* background-color: beige;
   background-color: cornsilk; */
   border: 1px solid lightslategray;
 }
+
+/* .folder-card.depth-0 { padding-left: 0; }
+.folder-card.depth-1 { padding-left: 20px; }
+.folder-card.depth-2 { padding-left: 40px; }
+.folder-card.depth-3 { padding-left: 60px; } */
