--- a/frontend/src/styles/FolderTree.css
+++ b/frontend/src/styles/FolderTree.css
@@ -1,84 +1,19 @@
+.folder-tree-container {
+  padding: 15px;
+  width: 14rem;
+  /* background-color: #ddd; */
+}
+
 .folder-list {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-
-.folder-container.active-folder .folder-card {
-  pointer-events: all;
-  opacity: 1;
-  background-color: #f0f0f0;
-  border: 1px solid lightslategray;
 }
 
 .menu-open .folder-card {
   pointer-events: none;
   opacity: 0.8;
-}
-
-.folder-card:hover {
-  /* background-color: beige;
-  background-color: cornsilk; */
-  border: 1px solid lightslategray;
-}
-
-.folder-icon {
-  color: burlywood;
-}
-
-.folder-card h4 {
-  margin: 0;
-  margin-left: 6px;
-}
-
-.folder-actions {
-  display: flex;
-  padding: 0px 3px;
-  margin-left: auto;
-}
-
-.folder-actions:hover {
-  padding: 0px 2px;
-  border-radius: 9px;
-  border: 1px solid lightslategray;
-}
-
-.folder-container.active-folder .folder-actions {
-  padding: 0px 2px;
-  border-radius: 9px;
-  border: 1px solid lightslategray;
-}
-
-.folder-actions-menu {
-  position: absolute;
-  top: 70%;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-  position: absolute;
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  padding: 2px;
-  z-index: 1000;
-}
-
-.menu-item {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  cursor: pointer;
-  font-size: 12px;
-  border-radius: 5px;
-  padding: 2px 4px;
-}
-
-.menu-item:hover {
-  padding: 1px 3px;
-  border: 1px solid #ddd;
 }
 
 .add-folder {
