--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,7 +1,7 @@
 /* Container for the home page */
-/* .container {
-  margin: 50px;
-} */
+.container {
+  padding: 20px;
+}
 
 /* .plus-button {
   display: flex;
