--- a/frontend/src/styles/Notebook.css
+++ b/frontend/src/styles/Notebook.css
@@ -1,4 +1,24 @@
-.plus-button {
+.notebook-container {
+  /* display: flex;
+  align-items: center; */
+  height: 100%;
+  /* background-color: aliceblue; */
+}
+
+.notebook-nav {
+  display: flex;
+  height: 100%;
+  /* justify-content: space-between; */
+  /* gap: 20px; */
+}
+
+.folder-tree-container {
+  padding: 15px;
+  width: 14rem;
+  /* background-color: #ddd; */
+}
+
+/* .plus-button {
   display: flex;
   align-items: center;
   background-color: #74b576;
@@ -9,4 +29,4 @@
   border-radius: 25px;
   cursor: pointer;
   font-size: 16px;
-}
+} */
