--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -37,7 +37,7 @@ h6 {
   margin-right: auto;
   /* align-items: center; */
   /* margin: 10px; */
-  padding: 0 2rem;
+  /* padding: 0 1rem; */
 }
 
 .btn {
