added tiptap text editor package for note component

--- a/frontend/src/styles/Notebook.css
+++ b/frontend/src/styles/Notebook.css
@@ -24,9 +24,9 @@
   background-color: rgba(255, 250, 240, 0.3);
 }
 
-.note-display {
+/* .note-display {
   justify-content: center;
-}
+} */
 
 /* .plus-button {
   display: flex;
