--- a/frontend/src/styles/Notebook.css
+++ b/frontend/src/styles/Notebook.css
@@ -24,9 +24,11 @@
   background-color: rgba(255, 250, 240, 0.3);
 }
 
-/* .note-display {
-  justify-content: center;
-} */
+.note-display {
+  /* justify-content:start;
+  align-items:start; */
+  height: 100%;
+}
 
 /* .plus-button {
   display: flex;
