--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,7 +1,8 @@
-/* Global Styles */
-/* * {
-  font-family: consolas;
-} */
+:root {
+  theme-light {
+    color-scheme: light;
+  }
+}
 
 body {
   margin: 0;
@@ -10,11 +11,11 @@ body {
   /* font-family:'Courier New', Courier, monospace; */
   font-size: 16px;
   line-height: 1.6;
-  color: var(--color-text);
-  background-color: var(--color-primary);
+  color: var(--theme-text);
+  background-color: var(--theme-primary);
   /* background-image: url("path/to/your/texture.jpg"); */
-  background-repeat: repeat;
-  background-size: 200px;
+  /* background-repeat: repeat; */
+  /* background-size: 200px; */
 }
 
 h1,
@@ -68,10 +69,39 @@ h6 {
   border-color: var(--color-accent);
 }
 
-/* CSS Variables */
-:root {
-  --color-primary: rgb(239, 236, 228);
-  --color-secondary: #c4c4c4;
-  --color-accent: #a1a1a1;
-  --color-text: #333;
+.theme-light {
+  --theme-primary: #ffffff;
+  --theme-secondary: #a0e4b0;
+  --theme-text: #111111;
+  --theme-accent-main: #78d98f;
+  --theme-accent-sublte: #c8efd1;
+  --theme-accent-contrast: #2a2a2a;
+}
+
+.theme-dark {
+  --theme-primary: #2a2a2a;
+  --theme-secondary: #49beb7;
+  /* --theme-text: #eafff7; */
+  --theme-text: #ffffff;
+  --theme-accent-main: #389c96;
+  --theme-accent-sublte: #6fcbc6;
+  --theme-accent-contrast: #ffffff;
+}
+
+.theme-bright {
+  --theme-primary: #abedd8;
+  --theme-secondary: #2a2a2a;
+  --theme-text: #000000;
+  --theme-accent-main: #d5f6eb;
+  --theme-accent-sublte: #81e4c4;
+  --theme-accent-contrast: #111111;
+}
+
+.theme-black {
+  --theme-primary: #111111;
+  --theme-secondary: #dcedc2;
+  --theme-text: #f3f9e9;
+  --theme-accent-main: #000000;
+  --theme-accent-sublte: #2a2a2a;
+  --theme-accent-contrast: #c5e19b;
 }
