--- a/frontend/src/components/Folder/Folder.css
+++ b/frontend/src/components/Folder/Folder.css
@@ -4,11 +4,24 @@
   width: auto;
   align-items: center;
   cursor: pointer;
-  color: darkslategray;
-  background-color: floralwhite;
-  padding: 2px 10px;
-  border-bottom: 2px solid gainsboro;
+  /* color: darkslategray; */
+  /* color: var(--theme-text); */
+  /* background-color: floralwhite; */
+  background-color: var(--theme-accent-subtle);
+  padding: 3px 10px;
+  margin: 2px 0px;
   border-radius: 5px;
+  border: solid 1px #63636355;
+  /* border-bottom: 3px solid rgba(155, 155, 155, 0.448); */
+}
+
+.folder-card:hover {
+  /* background-color: beige;
+  background-color: cornsilk; */
+  padding: 3px 10px;
+  margin: 2px 0px;
+  border: 1px solid var(--theme-accent-contrast);
+  /* outline: 1px solid; */
 }
 
 .folder-card.active-folder {
@@ -22,21 +35,29 @@
   display: flex;
   align-items: center;
   /* justify-content: space-between; */
-  gap: 3px;
+  /* gap: 0px; */
   margin-left: 5px;
   overflow: hidden;
 }
 
+.expand-icon {
+  display: flex;
+}
+
 .folder-card-items h6 {
-  margin: 0;
+  margin: 0px 5px;
   /* word-wrap: break-word; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 12.5px;
+  /* line-height centers the text vertically */
+  line-height: 1.3;
 }
 
 .folder-icon {
-  color: burlywood;
+  /* color: burlywood; */
+  margin-right: 5px;
 }
 
 /* .expand-icon {
@@ -44,12 +65,6 @@
   border: 1px solid lightslategray;
   border-radius: 10px;
 } */
-
-.folder-card:hover {
-  /* background-color: beige;
-  background-color: cornsilk; */
-  border: 1px solid lightslategray;
-}
 
 /* .folder-card.depth-0 { padding-left: 0; }
 .folder-card.depth-1 { padding-left: 20px; }
